REGD-132 fix dark mode and summary table (#22)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -107,6 +107,7 @@
     left: 20px;
     text-align: left;
     background-color: #f2f2f2;
+    color: #364565;
     border: 1px solid #bfbfbf;
     padding: 7px 20px;
     height: 50px;
